fixed layout issue in scenarios table

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -69,32 +69,38 @@ h4, .wiki h3 {font-size: 13px;padding: 2px 10px 1px 0px;margin-bottom: 5px; bord
 
 #main {background-color:#EEEEEE;}
 
-#sidebar{ float: right; width: 22%; position: relative; z-index: 9; padding: 0; margin: 0;}
-* html #sidebar{ width: 22%; }
+#sidebar{ float: right; width: 265px; position: relative; z-index: 9; padding: 0; margin: 0;}
+* html #sidebar{ width: 270px; }
 #sidebar h3{ font-size: 14px; margin-top:14px; color: #666;  }
 #sidebar hr{ width: 100%; margin: 0 auto; height: 1px; background: #ccc; border: 0; }
 * html #sidebar hr{ width: 95%; position: relative; left: -6px; color: #ccc; }
 #sidebar .contextual { margin-right: 1em; }
 
-#config-sidebar{ float: left; width: 22%; position: relative; z-index: 9; padding: 0; margin: 0;}
-* html #config-sidebar{ width: 22%; }
+#config-sidebar{ float: left; clear:left; display:inline;width: 270px; position: relative; z-index: 9; padding: 0; margin: 0;}
+* html #config-sidebar{ width: 270px; }
 #config-sidebar h3{ font-size: 14px; margin-top:14px; color: #666;  }
 #config-sidebar hr{ width: 100%; margin: 0 auto; height: 1px; background: #ccc; border: 0; }
 * html #config-sidebar hr{ width: 95%; position: relative; left: -6px; color: #ccc; }
 #config-sidebar .contextual { margin-right: 1em; }
 
 
-#content { width: 75%; background-color: #fff; margin: 0px; border-right: 1px solid #ddd; padding: 6px 10px 10px 10px; z-index: 10; }
-* html #content{ width: 75%; padding-left: 0; margin-top: 0px; padding: 6px 10px 10px 10px;}
-html body #content { min-height: 600px; } 
-* html body #content { height: 600px; } /* IE */
+#content { width: 940px; float:right; display:inline; background-color: #fff; margin: 0px; border-right: 1px solid #ddd; padding: 6px 10px 10px 10px; z-index: 10; }
+* html #content{ width: 940px; padding-left: 0; margin-top: 0px; padding: 6px 10px 10px 10px;}
+html body #content { min-height: 1000px; } 
+* html body #content { height: 1000px; } /* IE */
+
+#main.sidebar {width:1250px;}
+
+#main.config_sidebar {width:1250px;}
+#main.config_sidebar #content{ float: right; width:940px;display:inline;margin-right:14px; }
 
 #main.nosidebar #sidebar{ display: none; }
-#main.nosidebar #content{ width: auto; border-right: 0; }
+#main.nosidebar #content{  border-right: 0; }
 
-#main.config_sidebar #content{ float: left; width:76%; }
-#main.noconfig_sidebar #config_sidebar{ display: none; }
-#main.noconfig_sidebar #content{ width: auto; border-right: 0; }
+#main.noconfig_sidebar #config-sidebar{ display: none; }
+#main.noconfig_sidebar #content{ width: 940px; border-right: 0;float:left; }
+
+#main.no_sidebar_no_config_sidebar #content { width: 1210px; border-right: 0;float:left; }
 
 #footer {clear: both; border-top: 1px solid #bbb; font-size: 0.9em; color: #aaa; padding: 5px; text-align:center; background:#fff;}
 
